# Crucible

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CheckGit.cmake  README.md  cmake-linux-debug.sh  cmake-linux-release.sh  cmake-ninja-linux-debug.sh  cmake-ninja-linux-release.sh  cmake-vs2022-uwp.bat  cmake-vs2022.bat  cmake_genvars.cpp.in  cmake_genvars.h  vcpkg.json
.github/workflows/: build-nightly.yml  build-pr.yml  build.yml
Bin2H/: CMakeLists.txt  logo.h  main.cpp
Content/: crucible.icns
Content/Documentation/: CrucibleEngine-Documentation.md  ScriptingAPI-Documentation.md  WickedEngine-Documentation.md
Content/scripts/: camera_pointlight.lua  camera_spotlight.lua  emitter_burst.lua  health_station.lua  rotate_sun.lua  set_material_all.lua  set_material_color.lua  set_material_emissive.lua  spawn_many_lights.lua
Content/scripts/character_controller/: character_controller.lua
Content/scripts/character_controller/assets/: level.wiscene  open_door.lua  zone_lookat.lua
Content/scripts/dungeon_generator/: dungeon_generator.lua
Content/scripts/fighting_game/: fighting_game.lua
Content/scripts/fps_contoller/: fps_controller.lua
Crucible/: ArchiveVersionHistory.txt  CMakeLists.txt  CrucibleConfig.cmake.in  WickedEngine.h  logo.h  offlineshadercompiler.cpp  sdl2.h  wiApplication.cpp  wiArchive.cpp  wiArchive.h  wiBacklog.h  wiColor.h  wiEmittedParticle.cpp  wiEmittedParticle.h  wiEnums.h  wiInput.h  wiInput_BindLua.cpp  wiKeyValue.h  wiLua.h  wiLua_Globals.h  wiNavigation.cpp  wiRenderer.cpp  wiRenderer.h  wiResourceManager.cpp  wiScene.cpp  wiScene.h  wiScene_BindLua.cpp  wiScene_BindLua.h  wiScene_Components.cpp  wiScene_Components.h  wiScene_Serializers.cpp  wiShaderCompiler.cpp  wiTextureHelper.cpp  wiTextureHelper.h  wiVersion.cpp
Crucible/BULLET/: CMakeLists.txt
Crucible/LUA/: CMakeLists.txt
Crucible/Utility/: CMakeLists.txt
Crucible/Utility/FAudio/: CMakeLists.txt
Crucible/shaders/: ShaderInterop_EmittedParticle.h  ShaderInterop_Renderer.h  emittedparticle_emitCS.hlsl  globals.hlsli  objectHF.hlsli  objectHF_tessellation.hlsli
Editor/: AnimationWindow.cpp  AnimationWindow.h  ArmorWindow.cpp  ArmorWindow.h  CMakeLists.txt  CameraWindow.cpp  CameraWindow.h  ComponentsWindow.cpp  ComponentsWindow.h  Editor.cpp  Editor.h  Editor.rc  EmitterWindow.cpp  EmitterWindow.h  GeneralWindow.cpp  HealthWindow.cpp  HealthWindow.h  HumanoidWindow.cpp  IOWindow.cpp  IOWindow.h  IconDefinitions.h  MaterialWindow.cpp  MaterialWindow.h  MeshWindow.cpp  ModelImporter.h  ModelImporter_GLTF.cpp  ModelImporter_VMF.cpp  OptionsWindow.cpp  Package.appxmanifest  ResponseWindow.cpp  ResponseWindow.h  SplineWindow.cpp  SplineWindow.h  TerrainWindow.cpp  Translator.cpp  dummy_female.h  dummy_male.h  gameconfig.h  main_SDL2.cpp  main_Windows.cpp
Editor/Assets/: Icon.c
Editor/Data/: error.wiscene
Editor/Linux/Installer/Distribution/: crucible-engine.sh  crucible-engine.template.sh
Editor/Linux/Installer/Settings/: README.md
Example_ImGui/: CMakeLists.txt  Example_ImGui.cpp  Tests.rc  main_Windows.cpp
Example_ImGui_Docking/: CMakeLists.txt  Example_ImGui_Docking.cpp  Tests.rc  main_SDL2.cpp
Game_Executable/: CMakeLists.txt  IconDefinitions.h  exec.h  main.cpp  stdafx.h
Game_Executable/Assets/: Icon.c
Imgui_Editor_Prototype/: CMakeLists.txt  Example_ImGui_Docking.cpp  Example_ImGui_Docking.h  main_Windows.cpp
Template_Linux/: CMakeLists.txt  main.cpp
Template_UWP/: CMakeLists.txt  Package.appxmanifest
Template_Windows/: CMakeLists.txt  TemplateWindows.rc
Tests/: CMakeLists.txt  Tests.rc
WickedEngine/: ArchiveVersionHistory.txt  CMakeLists.txt  missing.h  offlineshadercompiler.cpp  wiApplication.cpp  wiArchive.cpp  wiBacklog.cpp  wiColor.h  wiEnums.h  wiInitializer.cpp  wiKeyValue.cpp  wiRenderer.cpp  wiRenderer.h  wiResourceManager.cpp  wiScene.cpp  wiScene.h  wiScene_BindLua.cpp  wiScene_BindLua.h  wiScene_Components.cpp  wiScene_Components.h  wiScene_Serializers.cpp  wiTextureHelper.cpp  wiTextureHelper.h  wiVersion.cpp
WickedEngine/LUA/: CMakeLists.txt
WickedEngine/physx/: generate_projects.bat
WickedEngine/shaders/: objectHF.hlsli
cmake/: CheckGit.cmake  cmake_genvars.cpp.in  cmake_genvars.h
scripts/: convert_normal_to_ogl_octahedral.py  convert_normal_todx_octahedral.py
